<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.apps.hesham.raye7.MapsActivity">
    </fragment>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/custom_app_bar"
            android:id="@+id/toolbar"/>

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.80"
                android:background="#FFFFFFFF"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="0.85"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/li1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:layout_weight="0.15"
                            android:text="@string/from"
                            android:textSize="16sp"
                            android:textStyle="bold"/>

                        <EditText
                            android:id="@+id/srcEditText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.85"
                            android:background="@drawable/rounded_edittext"
                            android:focusable="false"
                            android:hint="Source"
                            android:maxLines="1"
                            android:padding="4dp"
                            android:singleLine="true"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:layout_weight="0.15"
                            android:text="@string/to"
                            android:textSize="16sp"

                            android:textStyle="bold"/>

                        <EditText
                            android:id="@+id/destEditText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.85"
                            android:background="@drawable/rounded_edittext"
                            android:focusable="false"
                            android:hint="Destination"
                            android:maxLines="1"
                            android:padding="4dp"
                            android:singleLine="true"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/locationButton"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:background="@mipmap/ic_loc"/>

                    <Button
                        android:id="@+id/swapButton"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginTop="8dp"
                        android:background="@mipmap/ic_swap"/>
                </LinearLayout>
            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/frame"
            android:orientation="horizontal">

            <Button
                android:id="@+id/timeButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:alpha="0.7"
                android:drawableLeft="@drawable/ic_clock_24"
                android:text="@string/time"/>

            <Button
                android:id="@+id/dateButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:alpha="0.7"
                android:drawableLeft="@drawable/ic_calendar_24"
                android:text="@string/date"/>

            <Button
                android:id="@+id/findRouteButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:alpha="0.7"
                android:text="@string/find_route"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/takeMyCarButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:padding="10dp"
                android:text="@string/take_my_car"
                android:textColor="#ffffffff"/>

            <Button
                android:id="@+id/requestPickupButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button2"
                android:padding="10dp"
                android:text="@string/request_a_pickup"
                android:textColor="#00b386"/>
        </LinearLayout>
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/nav_menu">
    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>



